# Qomodoro

./: .gitignore  CMakeLists.txt  PKGBUILD  README.md  about.cpp  about.h  about.ui  build.sh  chart.cpp  chart.h  database.cpp  database.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pomodoro.cpp  pomodoro.db  pomodoro.h  preferences.cpp  preferences.h  preferences.ui  qomodoro.desktop  stopwatch.cpp  stopwatch.h
Pomodoro/: Pomodoro.cpp  Pomodoro.h  Timer.cpp  Timer.h  database.cpp  database.h  pomodoro.cpp  pomodoro.h  pomodorostate.cpp  pomodorostate.h  timer.cpp  timer.h
ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui  preferences.cpp  preferences.h  preferences.ui  runner.h
